--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -23,6 +23,8 @@
         <script src="services.js"></script>
         <script src="controllers.js"></script>
         <script src="directives.js"></script>
+        <script src="Chart.bundle.min.js"></script>
+        <script src="Chart.min.js"></script>
     </head>
     <body>
 
