--- a/redux/public/index.html
+++ b/redux/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Redux Async Example</title>
   </head>
-  <body>
+  <body style="background-color:black">
     <div id="root"></div>
     <!--
       This HTML file is a template.
