--- a/redux/public/index.html
+++ b/redux/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Redux Async Example</title>
+    <title>React-Redux- SQL lab </title>
   </head>
   <body style="background-color:black">
     <div id="root"></div>
