--- a/redux/public/index.html
+++ b/redux/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>React-Redux- SQL lab </title>
+      <link rel="icon" type="image/x-icon" href="https://reactjs.org/favicon.ico"> 
   </head>
   <body style="background-color:black">
     <div id="root"></div>
