--- a/Ng406/src/index.html
+++ b/Ng406/src/index.html
@@ -16,35 +16,52 @@
     <!-- Load the Angular Material stylesheet -->
   <link href="https://unpkg.com/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="http://esironal.github.io/cmtouch/lib/codemirror.css">
+	<link rel="stylesheet" href="http://esironal.github.io/cmtouch/addon/hint/show-hint.css">
+	<script src="http://esironal.github.io/cmtouch/lib/codemirror.js"></script>
+	<script src="http://esironal.github.io/cmtouch/addon/hint/show-hint.js"></script>
+	<script src="http://esironal.github.io/cmtouch/addon/hint/xml-hint.js"></script>
+	<script src="http://esironal.github.io/cmtouch/addon/hint/html-hint.js"></script>
+	<script src="http://esironal.github.io/cmtouch/mode/xml/xml.js"></script>
+	<script src="http://esironal.github.io/cmtouch/mode/javascript/javascript.js"></script>
+	<script src="http://esironal.github.io/cmtouch/mode/sql/sql.js"></script>
+	<script src="http://esironal.github.io/cmtouch/mode/css/css.js"></script>
+	<script src="http://esironal.github.io/cmtouch/mode/htmlmixed/htmlmixed.js"></script>
+	<script src="http://esironal.github.io/cmtouch/addon/selection/active-line.js"></script>
+	<script src="http://esironal.github.io/cmtouch/addon/edit/matchbrackets.js"></script>
+	<link rel="stylesheet" href="http://esironal.github.io/cmtouch/theme/neonsyntax.css">
   <style>body { font-family: Roboto, Arial, sans-serif; }</style>
   <style type="text/css">
 	.st0{fill:#DD0031;}
 	.st1{fill:#C3002F;}
 	.st2{fill:#FFFFFF;}
 	
-	.App-logo {
-  animation: App-logo-spin infinite 20s linear !important;
-  height: 80px !important;
-}
 
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
 </style>
 </head>
 <body style="background-color:black">
-  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 250 250"  class="App-logo" style="height:80px ;enable-background:new 0 0 250 250;" xml:space="preserve">
 
-<g>
-	<polygon class="st0" points="125,30 125,30 125,30 31.9,63.2 46.1,186.3 125,230 125,230 125,230 203.9,186.3 218.1,63.2 	"/>
-	<polygon class="st1" points="125,30 125,52.2 125,52.1 125,153.4 125,153.4 125,230 125,230 203.9,186.3 218.1,63.2 125,30 	"/>
-	<path class="st2" d="M125,52.1L66.8,182.6h0h21.7h0l11.7-29.2h49.4l11.7,29.2h0h21.7h0L125,52.1L125,52.1L125,52.1L125,52.1
-		L125,52.1z M142,135.4H108l17-40.9L142,135.4z"/>
-</g>
-</svg>
+
+
   <app-root></app-root>
 </body>
+
+	<script type="text/javascript">
+		CodeMirror.commands.autocomplete = function(cm) {
+			CodeMirror.showHint(cm, CodeMirror.hint.html);
+		}
+		window.onload = function() {
+			editor = CodeMirror(document.getElementById("code"), {
+				mode: "text/x-sql",
+				theme: "neonsyntax",
+				lineWrapping: true,
+				lineNumbers: true,
+				styleActiveLine: true,
+				matchBrackets: true,
+				extraKeys: {
+					"Ctrl-Space": "autocomplete"
+				}
+			});
+		};
+	</script>
 </html>
